RESOLVED FIXED138972
REGRESSION (r176238): Mailto links are getting preloaded, which results in a compose window
https://bugs.webkit.org/show_bug.cgi?id=138972
Summary REGRESSION (r176238): Mailto links are getting preloaded, which results in a ...
Tim Horton
Reported 2014-11-21 10:53:14 PST
REGRESSION (r176238): Mailto links are getting preloaded, which results in a compose window
Attachments
Patch (1.39 KB, patch)
2014-11-21 10:53 PST, Tim Horton
bdakin: review+
Tim Horton
Comment 1 2014-11-21 10:53:38 PST
Tim Horton
Comment 2 2014-11-21 10:54:12 PST
Still needs testing, but this should resolve.
Radar WebKit Bug Importer
Comment 3 2014-11-21 10:54:23 PST
Tim Horton
Comment 4 2014-11-21 12:11:50 PST
Note You need to log in before you can comment on or make changes to this bug.