REGRESSION (r176238): Mailto links are getting preloaded, which results in a compose window https://bugs.webkit.org/show_bug.cgi?id=138972

Reviewed by Beth Dakin.

* UIProcess/mac/WKActionMenuController.mm:
(-[WKActionMenuController willOpenMenu:withEvent:]):
Only preload links.


Canonical link: https://commits.webkit.org/156840@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176460 268f45cc-cd09-0410-ab3c-d52691b4dbfc